# Otus_hw7

./: CMakeLists.txt  bulk.h  main.cpp
.github/workflows/: release.yml
